優化各方面

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,116 @@
-### 1. 憑證與敏感資料 ###
+# === 🔒 憑證與敏感資料 ===
+*.env
+*.env.local
+*.env.production
+config.local.php
+database.local.php
+secrets.json
+*.key
+*.pem
+.htpasswd
+
+# === 💻 作業系統 ===
+# macOS
+.DS_Store
+.AppleDouble
+.LSOverride
+Icon
+._*
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+
+# Windows
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+$RECYCLE.BIN/
+*.lnk
+
+# Linux
+*~
+.nfs*
+
+# === 🛠️ IDE/編輯器 ===
+# VS Code
+.vscode/
+*.code-workspace
+
+# PhpStorm
+.idea/
+*.iml
+*.ipr
+*.iws
+
+# Sublime Text
+*.sublime-workspace
+*.sublime-project
+
+# === 📦 依賴與套件 ===
+node_modules/
+vendor/
+composer.lock
+package-lock.json
+yarn.lock
+
+# === 📊 日誌與快取 ===
+logs/
+*.log
+*.log.*
+cache/
+*.cache
+.cache/
+.sass-cache/
+
+# === 🗄️ 資料庫 ===
+*.sqlite
+*.sqlite3
+*.db
+*.sql.backup
+
+# === 📁 上傳與媒體檔案 ===
+uploads/*
+!uploads/placeholder.jpg
+!uploads/placeholder.svg
+!uploads/.gitkeep
+
+# === 🔧 建置與編譯 ===
+dist/
+build/
+*.css.map
+*.js.map
+*.min.css
+*.min.js
+
+# === 🧪 測試 ===
+coverage/
+.nyc_output/
+*.lcov
+
+# === 📋 備份與暫存 ===
+*.backup
+*.bak
+*.tmp
+*.temp
+*~
+*.swp
+*.swo
+
+# === 🚀 部署相關 ===
+.htaccess.backup
+deploy.php
+deployment-config.json
+
+# === 📝 專案特定 ===
+.todo
+.notes
+debug.log
+error.log
+access.log
+.local
 .env
 admin/.htpasswd
 admin/.htaccess
@@ -7,6 +119,7 @@ api/db_connect.php
 ### 2. 日誌與資料庫 ###
 /logs/
 *.log
+*.md
 portfolio_db.sql
 
 ### 3. 專案相依套件 ###
